eccjava/k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/eccjava"
  name: eccjava-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: eccjava-service
                port:
                  number: 8080
            path: /eccjava(/|$)(.*)
            pathType: ImplementationSpecific
